--- a/index.html
+++ b/index.html
@@ -2,8 +2,44 @@
 <html>
 <head>
 <title>recamera</title>
+<link rel = "stylesheet"
+   type = "text/css"
+   href = "stylesheet.css" />
 </head>
+
 <body>
-<p>coming in 2019</p>
+  <div class="title">
+    <p>
+      recamera - eco friendly disposable cameras
+    </p>
+  </div>
+
+  <div class="about">
+    <p>
+      recamera is the environmentally friendly way to use disposable cameras.
+    </p>
+
+    <p>
+      we recycle and repurpose old film bodies for use as disposable film cameras!
+    </p>
+  </div>
+  <div class="photo_one">
+  <p>
+    photo 1 here
+  </p>
+</div>
+ <div class="benefits">
+ <p>
+   benefits
+ </p>
+ </div>
+<div class="buy_now">
+  <p>
+    get yours now!
+  </p>
+</div>
+
+
+
 </body>
 </html>
